Very few complex widgets still lack a comprehensive WAI-ARIA support as these widgets require new concepts of interaction to be completely accessible.

To get familiar with Scouts new accessibility features we recommend using `aria.ts` as a starting point.

== Login Form: Add Support for Second-Factor (Form-Based)

For the form-based login box a basic second-factor support was added.
To verify the second factor a second credential verifier must be registered via `FormBasedAuthConfig#withSecondFactorVerifier`.

== Scout App as Embedded Jetty Server to Run in a Productive Environment

The former `org.eclipse.scout.dev.jetty.JettyServer` (now `Application`) was so far only used for development environments.
With this release it was improved so that it can be used in a productive environment too.
The Scout Application class (`org.eclipse.scout.rt.app.Application`) contains a main-method which may be started directly and itself starts an embedded Jetty server.
Therefore, an application server isn't required anymore.
See the xref:migration:partial$migration-guide-24.1.adoc#cha-jettyserver[migration guide] for further information.

== CodeTypes in TypeScript

Scout now contains a REST endpoint that returns CodeTypes. By default, only CodeTypes marked with `@ApiExposed` are returned (opt-in).
Such CodeTypes can then be loaded by the Scout TypeScript code to be reused in the UI.
Please refer to the xref:technical-guide:working-with-data/code-type.adoc#codetypes-in-typescript[documentation] for more details and examples.

== Tree: Improved Auto-Check Behavior When Checking Nodes

When enabling `AutoCheckChildNodes` for a Tree or TreeBox widget, the behavior of automatic node checking has changed.
The new behavior improves the consistence and represents better the real world requirements. For more details, consider
reading the corresponding chapter in the
xref:migration:partial$migration-guide-24.1.adoc#tree-improved-auto-check-behavior-when-checking-nodes[migration guide].